# gestion_Medicale

./: CMakeLists.txt  accueil.cpp  accueil.h  accueil.ui  consultation.php  deconnexion.cpp  dossier.php  imprimer_recu.php  liste_agents.php  liste_des_examens_demander.php  liste_dossiers.php  login.php  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  paiement.php  paiementEnregistrer.php  prelevement.php  profil.php  reception.php  resultatAnalyse.php  update_password.php
CSS/: login.css  register_admin.css
Gestion_Dossiers/: ResultatExamLabo.php  ResultatExamen.php  accueil.php  ajouter_agent.php  consultation.php  dossier.php  examen.php  examen_demander.php  hospitalisation.php  hospitaliser.php  index.php  logout.php  medecin.php  recherche.php  recherche_med_consultation.php  recherche_medecin.php  recherche_prelevement.php  recherche_resultatAnalyse.php  register_admin.php  soin.php  utilisateur.php
Gestion_Dossiers/CSS/: dossier.css  index.css  style.css  style.php  update_password.css
Gestion_Dossiers/Configuration/: config.php
Gestion_Dossiers/DATABASE/: hopemedicalcenter.sql
Gestion_Dossiers/Header/: head.php  header.php
Gestion_Dossiers/TRAITEMENT/: HistoriquePaiement.php  ResultatAnalyse.php  administrationsoin.php  agent.php  ajout_agent.php  get_agent_profil.php  hospitalisation.php  hospitaliser.php  liste_agents.php  logout.php  paiement.php  prelevement.php  searchAgents.php  searchPaiement.php  searchReception.php  search_hospitalisation.php  typeexam.php  update_profil.php
JS/: script.js
TRAITEMENT/: ResultatAnalyseAffiche.php  administrationsoin.php  categorieClient.php  consultation.php  demande_exam.php  fonction.php  liste_examen_demander.php  medecin.php  modalitePaiement.php  motifPaiement.php  motifexam.php  reception.php  search.php  searchExamendemander.php  specialite.php  toggle_status.php  utilisateur.php  viewhistorique.php
database/: databasehandler.cpp  databasehandler.h
